# quac-detection

./: .gitmodules  README.md  qrcode_detection_server.dockerfile  yolo_detection_server.dockerfile
quac_detection/: CMakeLists.txt  package.xml
quac_detection/include/detection_server/: detection_server.hpp
quac_detection/include/qrcode_detection_server/: qrcode_detection_server.hpp
quac_detection/include/yolo_detection_server/: yolo_detection_server.hpp
quac_detection/src/: detection_server.cpp  qrcode_detection_server.cpp  yolo_detection_server.cpp
