<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quac_detection</name>
  <version>0.0.0</version>
  <description>Quac object detection</description>
  <maintainer email="robotik@wgg-neumarkt.de">pilot</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_cpp</depend>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <build_depend>rclcpp</build_depend>

  <build_depend>tinyxml2_vendor</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>